--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">  
+      <!-- <div id="divMessages" class="messages"></div>
+    <div class="input-zone">
+      <label id="lblMessage" for="tbMessage">Message:</label>
+      <input id="tbMessage" class="input-zone-input" type="text" />
+      <button id="btnSend">Send</button>
+    </div></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
